Compress observed commands

--- a/tests/test_cases/2020/commands/7E0.0141.yaml
+++ b/tests/test_cases/2020/commands/7E0.0141.yaml
@@ -12,6 +12,7 @@ test_cases:
     CAT_ENA: 0
     CCM_CMPL: 0
     CCM_ENA: 1
+    CIM_SUP_FLAG: SPARK
     EGR_CMPL: 0
     EGR_ENA: 1
     EVAPCMPL: 0
