--- a/tests/test_cases/2020/commands/7E0.0142.yaml
+++ b/tests/test_cases/2020/commands/7E0.0142.yaml
@@ -3,5 +3,4 @@ can_id_format: ELEVEN_BIT
 extended_addressing_enabled: false
 test_cases:
 - response: 7E8044142384C
-  expected_values:
-    VPWR: 14.412
+  expected_values: {}
