--- a/tests/test_cases/2020/commands/7E0.7E8.22E002.yaml
+++ b/tests/test_cases/2020/commands/7E0.7E8.22E002.yaml
@@ -11,11 +11,7 @@ test_cases:
     7E82500000000000000
     7E82600000000000000
     7E8270000000000AAAA
-  expected_values:
-    VELOSTER_INJ_DUR_1: 0
-    VELOSTER_INJ_DUR_2: 0
-    VELOSTER_INJ_DUR_3: 0
-    VELOSTER_INJ_DUR_4: 0
+  expected_values: {}
 - response: |-
     7E8103562E0022B2F0F
     7E821FF00002F006203
@@ -25,11 +21,7 @@ test_cases:
     7E82500000000000000
     7E82600000000000000
     7E8270000000000AAAA
-  expected_values:
-    VELOSTER_INJ_DUR_1: 0
-    VELOSTER_INJ_DUR_2: 0
-    VELOSTER_INJ_DUR_3: 0
-    VELOSTER_INJ_DUR_4: 0
+  expected_values: {}
 - response: |-
     7E8103562E0022B2F0F
     7E821FF0000AF00F001
@@ -39,11 +31,7 @@ test_cases:
     7E82500000000000000
     7E82600000000000000
     7E8270000000000AAAA
-  expected_values:
-    VELOSTER_INJ_DUR_1: 0
-    VELOSTER_INJ_DUR_2: 0
-    VELOSTER_INJ_DUR_3: 0
-    VELOSTER_INJ_DUR_4: 0
+  expected_values: {}
 - response: |-
     7E8103562E0022B2F0F
     7E821FF0000B000ED01
@@ -53,11 +41,7 @@ test_cases:
     7E82500000000000000
     7E82600000000000000
     7E8270000000000AAAA
-  expected_values:
-    VELOSTER_INJ_DUR_1: 0
-    VELOSTER_INJ_DUR_2: 0
-    VELOSTER_INJ_DUR_3: 0
-    VELOSTER_INJ_DUR_4: 0
+  expected_values: {}
 - response: |-
     7E8103562E0022B2F0F
     7E821FF0000B000FA01
@@ -67,11 +51,7 @@ test_cases:
     7E82500000000000000
     7E82600000000000000
     7E8270000000000AAAA
-  expected_values:
-    VELOSTER_INJ_DUR_1: 0
-    VELOSTER_INJ_DUR_2: 0
-    VELOSTER_INJ_DUR_3: 0
-    VELOSTER_INJ_DUR_4: 0
+  expected_values: {}
 - response: |-
     7E8103562E0022B2F0F
     7E821FF0000B200EB01
@@ -81,11 +61,7 @@ test_cases:
     7E82500000000000000
     7E82600000000000000
     7E8270000000000AAAA
-  expected_values:
-    VELOSTER_INJ_DUR_1: 0
-    VELOSTER_INJ_DUR_2: 0
-    VELOSTER_INJ_DUR_3: 0
-    VELOSTER_INJ_DUR_4: 0
+  expected_values: {}
 - response: |-
     7E8103562E0022B2F0F
     7E821FF0000C2003503
@@ -95,11 +71,7 @@ test_cases:
     7E82500000000000000
     7E82600000000000000
     7E8270000000000AAAA
-  expected_values:
-    VELOSTER_INJ_DUR_1: 0
-    VELOSTER_INJ_DUR_2: 0
-    VELOSTER_INJ_DUR_3: 0
-    VELOSTER_INJ_DUR_4: 0
+  expected_values: {}
 - response: |-
     7E8103562E0022B2F0F
     7E821FF0000C200F201
@@ -109,8 +81,4 @@ test_cases:
     7E82500000000000000
     7E82600000000000000
     7E8270000000000AAAA
-  expected_values:
-    VELOSTER_INJ_DUR_1: 0
-    VELOSTER_INJ_DUR_2: 0
-    VELOSTER_INJ_DUR_3: 0
-    VELOSTER_INJ_DUR_4: 0
+  expected_values: {}
