--- a/tests/test_cases/2020/commands/7A0.7A8.22C00B.yaml
+++ b/tests/test_cases/2020/commands/7A0.7A8.22C00B.yaml
@@ -1,46 +1,114 @@
 command_id: 7A0.7A8.22C00B
-can_id_format: ELEVEN_BIT
-extended_addressing_enabled: false
 test_cases:
 - response: |-
     7A8101762C00BFFFF00
     7A82100B6580100B85F
     7A8220100AD4E0100B6
     7A8234D0100AAAAAAAA
-  expected_values: {}
+  expected_values:
+    VELOSTER_TPMS_ALERT_FL: 0
+    VELOSTER_TPMS_ALERT_FR: 1
+    VELOSTER_TPMS_ALERT_RR: 1
+    VELOSTER_TPMS_PRESS_FL: 36.4
+    VELOSTER_TPMS_PRESS_FR: 19
+    VELOSTER_TPMS_PRESS_RL: 0
+    VELOSTER_TPMS_PRESS_RR: 0.2
+    VELOSTER_TPMS_TEMP_FL: 88
+    VELOSTER_TPMS_TEMP_FR: 1
+    VELOSTER_TPMS_TEMP_RR: 0
 - response: |-
     7A8101762C00BFFFF00
     7A82100B7570100B75A
     7A8220100B04F0100B9
     7A8234F0100AAAAAAAA
-  expected_values: {}
+  expected_values:
+    VELOSTER_TPMS_ALERT_FL: 0
+    VELOSTER_TPMS_ALERT_FR: 1
+    VELOSTER_TPMS_ALERT_RR: 1
+    VELOSTER_TPMS_PRESS_FL: 36.6
+    VELOSTER_TPMS_PRESS_FR: 18
+    VELOSTER_TPMS_PRESS_RL: 0
+    VELOSTER_TPMS_PRESS_RR: 0.2
+    VELOSTER_TPMS_TEMP_FL: 87
+    VELOSTER_TPMS_TEMP_FR: 1
+    VELOSTER_TPMS_TEMP_RR: 0
 - response: |-
     7A8101762C00BFFFF00
     7A82100B7580200B65A
     7A8220100AE4F0100B6
     7A8234E0200AAAAAAAA
-  expected_values: {}
+  expected_values:
+    VELOSTER_TPMS_ALERT_FL: 0
+    VELOSTER_TPMS_ALERT_FR: 1
+    VELOSTER_TPMS_ALERT_RR: 1
+    VELOSTER_TPMS_PRESS_FL: 36.6
+    VELOSTER_TPMS_PRESS_FR: 18
+    VELOSTER_TPMS_PRESS_RL: 0
+    VELOSTER_TPMS_PRESS_RR: 0.2
+    VELOSTER_TPMS_TEMP_FL: 88
+    VELOSTER_TPMS_TEMP_FR: 1
+    VELOSTER_TPMS_TEMP_RR: 0
 - response: |-
     7A8101762C00BFFFF00
     7A82100B7580200B75F
     7A8220200AE4E0200B6
     7A8234E0100AAAAAAAA
-  expected_values: {}
+  expected_values:
+    VELOSTER_TPMS_ALERT_FL: 0
+    VELOSTER_TPMS_ALERT_FR: 1
+    VELOSTER_TPMS_ALERT_RR: 1
+    VELOSTER_TPMS_PRESS_FL: 36.6
+    VELOSTER_TPMS_PRESS_FR: 19
+    VELOSTER_TPMS_PRESS_RL: 0
+    VELOSTER_TPMS_PRESS_RR: 0.4
+    VELOSTER_TPMS_TEMP_FL: 88
+    VELOSTER_TPMS_TEMP_FR: 2
+    VELOSTER_TPMS_TEMP_RR: 0
 - response: |-
     7A8101762C00BFFFF00
     7A82100B7580200B75F
     7A8220200AE4E0200B6
     7A8234E0200AAAAAAAA
-  expected_values: {}
+  expected_values:
+    VELOSTER_TPMS_ALERT_FL: 0
+    VELOSTER_TPMS_ALERT_FR: 1
+    VELOSTER_TPMS_ALERT_RR: 1
+    VELOSTER_TPMS_PRESS_FL: 36.6
+    VELOSTER_TPMS_PRESS_FR: 19
+    VELOSTER_TPMS_PRESS_RL: 0
+    VELOSTER_TPMS_PRESS_RR: 0.4
+    VELOSTER_TPMS_TEMP_FL: 88
+    VELOSTER_TPMS_TEMP_FR: 2
+    VELOSTER_TPMS_TEMP_RR: 0
 - response: |-
     7A8101762C00BFFFF00
     7A82100B7590100B65A
     7A8220100AE4F0100B7
     7A8234F0100AAAAAAAA
-  expected_values: {}
+  expected_values:
+    VELOSTER_TPMS_ALERT_FL: 0
+    VELOSTER_TPMS_ALERT_FR: 1
+    VELOSTER_TPMS_ALERT_RR: 1
+    VELOSTER_TPMS_PRESS_FL: 36.6
+    VELOSTER_TPMS_PRESS_FR: 18
+    VELOSTER_TPMS_PRESS_RL: 0
+    VELOSTER_TPMS_PRESS_RR: 0.2
+    VELOSTER_TPMS_TEMP_FL: 89
+    VELOSTER_TPMS_TEMP_FR: 1
+    VELOSTER_TPMS_TEMP_RR: 0
 - response: |-
     7A8101762C00BFFFF00
     7A82100B8580100B85E
     7A8220100AD4E0100B6
     7A8234D0100AAAAAAAA
-  expected_values: {}
+  expected_values:
+    VELOSTER_TPMS_ALERT_FL: 0
+    VELOSTER_TPMS_ALERT_FR: 1
+    VELOSTER_TPMS_ALERT_RR: 1
+    VELOSTER_TPMS_PRESS_FL: 36.8
+    VELOSTER_TPMS_PRESS_FR: 18.8
+    VELOSTER_TPMS_PRESS_RL: 0
+    VELOSTER_TPMS_PRESS_RR: 0.2
+    VELOSTER_TPMS_TEMP_FL: 88
+    VELOSTER_TPMS_TEMP_FR: 1
+    VELOSTER_TPMS_TEMP_RR: 0
