Updated command responses

--- a/tests/test_cases/2020/command_support.yaml
+++ b/tests/test_cases/2020/command_support.yaml
@@ -1,5 +1,22 @@
 model_year: 2020
 supported_commands_by_ecu:
+  770:
+  - 770.778.22BC03:VELOSTER_BELT_DRIVER,VELOSTER_BELT_PASSENGER,VELOSTER_DEFOG_SW,VELOSTER_DOOR_FL_OPEN,VELOSTER_DOOR_FR_OPEN,VELOSTER_DOOR_RL_OPEN,VELOSTER_DOOR_RR_OPEN,VELOSTER_DOOR_TRUNK_OPEN,VELOSTER_HANDBRAKE
+  - 770.778.22BC04:VELOSTER_LOCK_FL,VELOSTER_LOCK_FR,VELOSTER_REVERSE_GEAR
+  - 770.778.22BC05:VELOSTER_HAZARD_SW,VELOSTER_HL_SW
+  - 770.778.22BC07:VELOSTER_DEFOG_LIGHT
+  - 770.778.22BC08
+  - 770.778.22BC09:VELOSTER_HL_HIGH,VELOSTER_HL_LOW
+  7A0:
+  - 7A0.7A8.22C00B:VELOSTER_TPMS_ALERT_FL,VELOSTER_TPMS_ALERT_FR,VELOSTER_TPMS_ALERT_RL,VELOSTER_TPMS_ALERT_RR,VELOSTER_TPMS_PRESS_FL,VELOSTER_TPMS_PRESS_FR,VELOSTER_TPMS_PRESS_RL,VELOSTER_TPMS_PRESS_RR,VELOSTER_TPMS_TEMP_FL,VELOSTER_TPMS_TEMP_FR,VELOSTER_TPMS_TEMP_RL,VELOSTER_TPMS_TEMP_RR
+  7B3:
+  - 7B3.7BB.220100
+  7C6:
+  - 7C6.7CE.22B002:VELOSTER_CLUSTER_VOLTAGE,VELOSTER_FLI_VOL,VELOSTER_ODO_KM,VELOSTER_ODO_MI
+  7D4:
+  - 7D4.7DC.220101:VELOSTER_BMS_CHG_PWR,VELOSTER_BMS_DISCHG_PWR,VELOSTER_BMS_MIN_TEMP,VELOSTER_BMS_MOD1_TEMP,VELOSTER_BMS_MOD2_TEMP,VELOSTER_BMS_MOD3_TEMP,VELOSTER_BMS_MOD4_TEMP,VELOSTER_BMS_SOC
+  7DF:
+  - 7DF.7E8.0134
   7E0:
   - 0101:ACRF_RDY,ACRF_SUP,AIR_RDY,AIR_SUP,CAT_RDY,CAT_SUP,CCM_RDY,CCM_SUP,CIM_SUP,DTC_CNT,EGR_RDY,EGR_SUP,EVAP_RDY,EVAP_SUP,FUEL_RDY,FUEL_SUP,HCAT_RDY,HCAT_SUP,HTR_RDY,HTR_SUP,MIL,MIS_RDY,MIS_SUP,O2S_RDY,O2S_SUP
   - 0103:FUELSYS1,FUELSYS2
@@ -37,6 +54,18 @@ supported_commands_by_ecu:
   - 014C:TAC_PCT
   - 0151:FUEL_TYP
   - 0156:LGSO2FT1
+  - 7E0.0101:ACRF_RDY,ACRF_SUP,AIR_RDY,AIR_SUP,CAT_RDY,CAT_SUP,CCM_RDY,CCM_SUP,CIM_SUP,DTC_CNT,EGR_RDY,EGR_SUP,EVAP_RDY,EVAP_SUP,FUEL_RDY,FUEL_SUP,HCAT_RDY,HCAT_SUP,HTR_RDY,HTR_SUP,MIL,MIS_RDY,MIS_SUP,O2S_RDY,O2S_SUP
+  - 7E0.010D:VSS
+  - 7E0.0121:MIL_DIST
+  - 7E0.012F:FLI
+  - 7E0.0130:WARM_UPS
+  - 7E0.0131:CLR_DIST
+  - 7E0.0141:ACRFCMPL,ACRF_ENA,AIR_CMPL,AIR_ENA,CAT_CMPL,CAT_ENA,CCM_CMPL,CCM_ENA,CIM_SUP_FLAG,EGR_CMPL,EGR_ENA,EVAPCMPL,EVAP_ENA,FUEL_CMPL,FUEL_ENA,HCATCMPL,HCAT_ENA,HTR_CMPL,HTR_ENA,MIS_CMPL,MIS_ENA,O2S_CMPL,O2S_ENA
+  - 7E0.0142:VPWR
+  - 7E0.7E8.22E001:VELOSTER_INTAKE_TEMP,VELOSTER_OIL_TEMP
+  - 7E0.7E8.22E002
+  - 7E0.7E8.22E004:VELOSTER_AUX_SOC,VELOSTER_AUX_SOH
+  - 7E0.7E8.22E00A:VELOSTER_KNOCK_LEARN_1,VELOSTER_KNOCK_LEARN_2,VELOSTER_KNOCK_LEARN_3,VELOSTER_KNOCK_LEARN_4,VELOSTER_KNOCK_RETARD_1,VELOSTER_KNOCK_RETARD_2,VELOSTER_KNOCK_RETARD_3,VELOSTER_KNOCK_RETARD_4
   7E1:
   - 0101:ACRF_RDY,ACRF_SUP,AIR_RDY,AIR_SUP,CAT_RDY,CAT_SUP,CCM_RDY,CCM_SUP,CIM_SUP,DTC_CNT,EGR_RDY,EGR_SUP,EVAP_RDY,EVAP_SUP,FUEL_RDY,FUEL_SUP,HCAT_RDY,HCAT_SUP,HTR_RDY,HTR_SUP,MIL,MIS_RDY,MIS_SUP,O2S_RDY,O2S_SUP
   - 011C:OBDSUP
