Updated command responses

--- a/tests/test_cases/2020/commands/7E0.7E8.22E001.yaml
+++ b/tests/test_cases/2020/commands/7E0.7E8.22E001.yaml
@@ -1,6 +1,9 @@
 command_id: 7E0.7E8.22E001
 test_cases:
-- response: |-
+- expected_values:
+    VELOSTER_INTAKE_TEMP: 60.75272
+    VELOSTER_OIL_TEMP: 92.25351
+  response: |-
     7E8103362E001D9BDFB
     7E821FFC7C7E8860B4A
     7E822000000008100A2
@@ -9,10 +12,10 @@ test_cases:
     7E825D10091BB150000
     7E82600000000000000
     7E827000000AAAAAAAA
-  expected_values:
-    VELOSTER_INTAKE_TEMP: 60.75272
-    VELOSTER_OIL_TEMP: 92.25351
-- response: |-
+- expected_values:
+    VELOSTER_INTAKE_TEMP: 67.50289
+    VELOSTER_OIL_TEMP: 93.00353
+  response: |-
     7E8103362E001D9BDFB
     7E821FFCBCAEC261364
     7E82200000000A30040
@@ -21,10 +24,10 @@ test_cases:
     7E825B3009ABC180000
     7E82600000000000000
     7E827000000AAAAAAAA
-  expected_values:
-    VELOSTER_INTAKE_TEMP: 67.50289
-    VELOSTER_OIL_TEMP: 93.00353
-- response: |-
+- expected_values:
+    VELOSTER_INTAKE_TEMP: 61.50274
+    VELOSTER_OIL_TEMP: 92.25351
+  response: |-
     7E8103362E001D9BDFB
     7E821FFD0D0E8720B4A
     7E822000000007900AE
@@ -33,10 +36,10 @@ test_cases:
     7E825D10092BB150000
     7E82600000000000000
     7E827000000AAAAAAAA
-  expected_values:
-    VELOSTER_INTAKE_TEMP: 61.50274
+- expected_values:
+    VELOSTER_INTAKE_TEMP: 62.25276
     VELOSTER_OIL_TEMP: 92.25351
-- response: |-
+  response: |-
     7E8103362E001D9BDFB
     7E821FFD2D1E87E0B4A
     7E822000000007A00A6
@@ -45,10 +48,10 @@ test_cases:
     7E825CD0093BB150000
     7E82600000000000000
     7E827000000AAAAAAAA
-  expected_values:
-    VELOSTER_INTAKE_TEMP: 62.25276
+- expected_values:
+    VELOSTER_INTAKE_TEMP: 61.50274
     VELOSTER_OIL_TEMP: 92.25351
-- response: |-
+  response: |-
     7E8103362E001D9BDFB
     7E821FFD2D1E8840B4A
     7E822000000007E0096
@@ -57,10 +60,10 @@ test_cases:
     7E825D00092BB150000
     7E82600000000000000
     7E827000000AAAAAAAA
-  expected_values:
-    VELOSTER_INTAKE_TEMP: 61.50274
-    VELOSTER_OIL_TEMP: 92.25351
-- response: |-
+- expected_values:
+    VELOSTER_INTAKE_TEMP: 52.50251
+    VELOSTER_OIL_TEMP: 93.75354
+  response: |-
     7E8103362E001D9BDFB
     7E821FFD2D1E99C175D
     7E82200000000490022
@@ -69,10 +72,10 @@ test_cases:
     7E825060186BD170000
     7E82600000000000000
     7E827000000AAAAAAAA
-  expected_values:
-    VELOSTER_INTAKE_TEMP: 52.50251
-    VELOSTER_OIL_TEMP: 93.75354
-- response: |-
+- expected_values:
+    VELOSTER_INTAKE_TEMP: 60.0027
+    VELOSTER_OIL_TEMP: 92.25351
+  response: |-
     7E8103362E001D9BDFB
     7E821FFD3D3E88C0B4A
     7E822000000007500D0
@@ -81,10 +84,10 @@ test_cases:
     7E825D60090BB150000
     7E82600000000000000
     7E827000000AAAAAAAA
-  expected_values:
-    VELOSTER_INTAKE_TEMP: 60.0027
-    VELOSTER_OIL_TEMP: 92.25351
-- response: |-
+- expected_values:
+    VELOSTER_INTAKE_TEMP: 57.75264
+    VELOSTER_OIL_TEMP: 93.00353
+  response: |-
     7E8103362E001D9BDFB
     7E821FFD3D3E9740C4D
     7E822000000007B002E
@@ -93,10 +96,10 @@ test_cases:
     7E825E3008DBC160000
     7E82600000000000000
     7E827000000AAAAAAAA
-  expected_values:
-    VELOSTER_INTAKE_TEMP: 57.75264
-    VELOSTER_OIL_TEMP: 93.00353
-- response: |-
+- expected_values:
+    VELOSTER_INTAKE_TEMP: 54.00255
+    VELOSTER_OIL_TEMP: 93.75354
+  response: |-
     7E8103362E001D9BDFB
     7E821FFD3D3E9C6185F
     7E822000000007200AC
@@ -105,10 +108,10 @@ test_cases:
     7E825FD0088BD170000
     7E82600000000000000
     7E827000000AAAAAAAA
-  expected_values:
-    VELOSTER_INTAKE_TEMP: 54.00255
-    VELOSTER_OIL_TEMP: 93.75354
-- response: |-
+- expected_values:
+    VELOSTER_INTAKE_TEMP: 67.50289
+    VELOSTER_OIL_TEMP: 93.00353
+  response: |-
     7E8103362E001D9BDFB
     7E821FFD3D3EB080C4D
     7E822000000007B0076
@@ -117,10 +120,10 @@ test_cases:
     7E825B3009ABC190000
     7E82600000000000000
     7E827000000AAAAAAAA
-  expected_values:
-    VELOSTER_INTAKE_TEMP: 67.50289
+- expected_values:
+    VELOSTER_INTAKE_TEMP: 60.75272
     VELOSTER_OIL_TEMP: 93.00353
-- response: |-
+  response: |-
     7E8103362E001D9BDFB
     7E821FFD3D3EC940B4A
     7E82200000000700092
@@ -129,10 +132,10 @@ test_cases:
     7E825D10091BC140000
     7E82600000000000000
     7E827000000AAAAAAAA
-  expected_values:
-    VELOSTER_INTAKE_TEMP: 60.75272
+- expected_values:
+    VELOSTER_INTAKE_TEMP: 66.00285
     VELOSTER_OIL_TEMP: 93.00353
-- response: |-
+  response: |-
     7E8103362E001D9BDFB
     7E821FFD3D3ECDC0B4C
     7E82200000000700060
@@ -141,10 +144,10 @@ test_cases:
     7E825BB0098BC170000
     7E82600000000000000
     7E827000000AAAAAAAA
-  expected_values:
-    VELOSTER_INTAKE_TEMP: 66.00285
-    VELOSTER_OIL_TEMP: 93.00353
-- response: |-
+- expected_values:
+    VELOSTER_INTAKE_TEMP: 57.75264
+    VELOSTER_OIL_TEMP: 94.50356
+  response: |-
     7E8103362E001D9BDFB
     7E821FFD5D4EC92165F
     7E822000000004A0010
@@ -153,10 +156,10 @@ test_cases:
     7E825E5008DBE140000
     7E82600000000000000
     7E827000000AAAAAAAA
-  expected_values:
-    VELOSTER_INTAKE_TEMP: 57.75264
-    VELOSTER_OIL_TEMP: 94.50356
-- response: |-
+- expected_values:
+    VELOSTER_INTAKE_TEMP: 65.25283
+    VELOSTER_OIL_TEMP: 93.75354
+  response: |-
     7E8103362E001D9BDFB
     7E821FFD5D4ECC80E5D
     7E82200000000910026
@@ -165,10 +168,10 @@ test_cases:
     7E825BE0097BD150000
     7E82600000000000000
     7E827000000AAAAAAAA
-  expected_values:
-    VELOSTER_INTAKE_TEMP: 65.25283
-    VELOSTER_OIL_TEMP: 93.75354
-- response: |-
+- expected_values:
+    VELOSTER_INTAKE_TEMP: 66.75287
+    VELOSTER_OIL_TEMP: 93.00353
+  response: |-
     7E8103362E001D9BDFB
     7E821FFD5D4ECDA0B4C
     7E822000000007B008C
@@ -177,10 +180,10 @@ test_cases:
     7E825B50099BC150000
     7E82600000000000000
     7E827000000AAAAAAAA
-  expected_values:
-    VELOSTER_INTAKE_TEMP: 66.75287
+- expected_values:
+    VELOSTER_INTAKE_TEMP: 59.25268
     VELOSTER_OIL_TEMP: 93.00353
-- response: |-
+  response: |-
     7E8103362E001D9BDFB
     7E821FFD5D4ECE8135B
     7E822000000004B00E0
@@ -189,6 +192,3 @@ test_cases:
     7E825DA008FBC150000
     7E82600000000000000
     7E827000000AAAAAAAA
-  expected_values:
-    VELOSTER_INTAKE_TEMP: 59.25268
-    VELOSTER_OIL_TEMP: 93.00353
