--- a/tests/test_cases/2020/commands/7E0.7E8.22E004.yaml
+++ b/tests/test_cases/2020/commands/7E0.7E8.22E004.yaml
@@ -1,6 +1,9 @@
 command_id: 7E0.7E8.22E004
 test_cases:
-- response: |-
+- expected_values:
+    VELOSTER_AUX_SOC: 100
+    VELOSTER_AUX_SOH: 12
+  response: |-
     7E8103F62E004FFC0FE
     7E821030C1A9011D711
     7E822861000B00C0080
@@ -11,10 +14,10 @@ test_cases:
     7E8271D000000000000
     7E82800D8FF00000000
     7E82900AAAAAAAAAAAA
-  expected_values:
-    VELOSTER_AUX_SOC: 100
-    VELOSTER_AUX_SOH: 12
-- response: |-
+- expected_values:
+    VELOSTER_AUX_SOC: 44
+    VELOSTER_AUX_SOH: 13
+  response: |-
     7E8103F62E004FFC0FE
     7E82103111C9011D20B
     7E822F10C01C00C0080
@@ -25,10 +28,10 @@ test_cases:
     7E8271D000000000000
     7E82800D8FF00000000
     7E82900AAAAAAAAAAAA
-  expected_values:
-    VELOSTER_AUX_SOC: 44
+- expected_values:
+    VELOSTER_AUX_SOC: 48
     VELOSTER_AUX_SOH: 13
-- response: |-
+  response: |-
     7E8103F62E004FFC0FE
     7E82103221B90118012
     7E8221A1200AD0C0080
@@ -39,10 +42,10 @@ test_cases:
     7E8271D000000000000
     7E82800D8FF00000000
     7E82900AAAAAAAAAAAA
-  expected_values:
-    VELOSTER_AUX_SOC: 48
-    VELOSTER_AUX_SOH: 13
-- response: |-
+- expected_values:
+    VELOSTER_AUX_SOC: 100
+    VELOSTER_AUX_SOH: 12
+  response: |-
     7E8103F62E004FFC0FE
     7E82103241A9011ED11
     7E8223F1100B20C0080
@@ -53,10 +56,10 @@ test_cases:
     7E8271D000000000000
     7E82800D8FF00000000
     7E82900AAAAAAAAAAAA
-  expected_values:
-    VELOSTER_AUX_SOC: 100
-    VELOSTER_AUX_SOH: 12
-- response: |-
+- expected_values:
+    VELOSTER_AUX_SOC: 41
+    VELOSTER_AUX_SOH: 13
+  response: |-
     7E8103F62E004FFC0FE
     7E821032E1C90110C12
     7E822B011009E0C0080
@@ -67,10 +70,10 @@ test_cases:
     7E8271D000000000000
     7E82800D8FF00000000
     7E82900AAAAAAAAAAAA
-  expected_values:
-    VELOSTER_AUX_SOC: 41
-    VELOSTER_AUX_SOH: 13
-- response: |-
+- expected_values:
+    VELOSTER_AUX_SOC: 100
+    VELOSTER_AUX_SOH: 12
+  response: |-
     7E8103F62E004FFC0FE
     7E821033F149E0FF20F
     7E822C10E01B20C0080
@@ -81,10 +84,10 @@ test_cases:
     7E8271D000000000000
     7E82800D8FF00000000
     7E82900AAAAAAAAAAAA
-  expected_values:
+- expected_values:
     VELOSTER_AUX_SOC: 100
     VELOSTER_AUX_SOH: 12
-- response: |-
+  response: |-
     7E8103F62E004FFC0FE
     7E8210344109E0F490A
     7E822650A05CB0C0080
@@ -95,10 +98,10 @@ test_cases:
     7E8271D000000000000
     7E82800D8FF00000000
     7E82900AAAAAAAAAAAA
-  expected_values:
+- expected_values:
     VELOSTER_AUX_SOC: 100
     VELOSTER_AUX_SOH: 12
-- response: |-
+  response: |-
     7E8103F62E004FFC0FE
     7E821037F1A90119211
     7E822351100AD0C0080
@@ -109,10 +112,10 @@ test_cases:
     7E8271D000000000000
     7E82800D8FF00000000
     7E82900AAAAAAAAAAAA
-  expected_values:
-    VELOSTER_AUX_SOC: 100
-    VELOSTER_AUX_SOH: 12
-- response: |-
+- expected_values:
+    VELOSTER_AUX_SOC: 30
+    VELOSTER_AUX_SOH: 13
+  response: |-
     7E8103F62E004FFC0FE
     7E8210390109E0F3F0B
     7E822040B04AF0C0080
@@ -123,10 +126,10 @@ test_cases:
     7E8271D000000000000
     7E82800D8FF00000000
     7E82900AAAAAAAAAAAA
-  expected_values:
-    VELOSTER_AUX_SOC: 30
+- expected_values:
+    VELOSTER_AUX_SOC: 47
     VELOSTER_AUX_SOH: 13
-- response: |-
+  response: |-
     7E8103F62E004FFC0FE
     7E82103950E9E0F8C0A
     7E822990A06BB0C0080
@@ -137,10 +140,10 @@ test_cases:
     7E8271D000000000000
     7E82800D8FF00000000
     7E82900AAAAAAAAAAAA
-  expected_values:
-    VELOSTER_AUX_SOC: 47
-    VELOSTER_AUX_SOH: 13
-- response: |-
+- expected_values:
+    VELOSTER_AUX_SOC: 100
+    VELOSTER_AUX_SOH: 12
+  response: |-
     7E8103F62E004FFC0FE
     7E82103B1199011B211
     7E822691100AC0C0080
@@ -151,10 +154,10 @@ test_cases:
     7E8271D000000000000
     7E82800D8FF00000000
     7E82900AAAAAAAAAAAA
-  expected_values:
+- expected_values:
     VELOSTER_AUX_SOC: 100
     VELOSTER_AUX_SOH: 12
-- response: |-
+  response: |-
     7E8103F62E004FFC0FE
     7E82103B61990112811
     7E822351100AF0C0080
@@ -165,10 +168,10 @@ test_cases:
     7E8271D000000000000
     7E82800D8FF00000000
     7E82900AAAAAAAAAAAA
-  expected_values:
-    VELOSTER_AUX_SOC: 100
-    VELOSTER_AUX_SOH: 12
-- response: |-
+- expected_values:
+    VELOSTER_AUX_SOC: 49
+    VELOSTER_AUX_SOH: 13
+  response: |-
     7E8103F62E004FFC0FE
     7E82103C11D9011310E
     7E822B10E01950C0080
@@ -179,10 +182,10 @@ test_cases:
     7E8271D000000000000
     7E82800D8FF00000000
     7E82900AAAAAAAAAAAA
-  expected_values:
-    VELOSTER_AUX_SOC: 49
-    VELOSTER_AUX_SOH: 13
-- response: |-
+- expected_values:
+    VELOSTER_AUX_SOC: 100
+    VELOSTER_AUX_SOH: 12
+  response: |-
     7E8103F62E004FFC0FE
     7E82103D21990110E11
     7E822991100AC0C0080
@@ -193,6 +196,3 @@ test_cases:
     7E8271D000000000000
     7E82800D8FF00000000
     7E82900AAAAAAAAAAAA
-  expected_values:
-    VELOSTER_AUX_SOC: 100
-    VELOSTER_AUX_SOH: 12
