--- a/tests/test_cases/2019/command_support.yaml
+++ b/tests/test_cases/2019/command_support.yaml
@@ -1,6 +1,20 @@
 model_year: 2019
 supported_commands_by_ecu:
-  7E0:
+  "770":
+  - 770.778.22BC03:VELOSTER_BELT_DRIVER,VELOSTER_BELT_PASSENGER,VELOSTER_DEFOG_SW,VELOSTER_DOOR_FL_OPEN,VELOSTER_DOOR_FR_OPEN,VELOSTER_DOOR_RL_OPEN,VELOSTER_DOOR_RR_OPEN,VELOSTER_DOOR_TRUNK_OPEN,VELOSTER_HANDBRAKE
+  - 770.778.22BC04:VELOSTER_LOCK_FL,VELOSTER_LOCK_FR,VELOSTER_REVERSE_GEAR
+  - 770.778.22BC05:VELOSTER_HAZARD_SW,VELOSTER_HL_SW
+  - 770.778.22BC07:VELOSTER_DEFOG_LIGHT
+  - 770.778.22BC09:VELOSTER_HL_HIGH,VELOSTER_HL_LOW
+  "7A0":
+  - 7A0.7A8.22C00B:VELOSTER_TPMS_ALERT_FL,VELOSTER_TPMS_ALERT_FR,VELOSTER_TPMS_ALERT_RL,VELOSTER_TPMS_ALERT_RR,VELOSTER_TPMS_PRESS_FL,VELOSTER_TPMS_PRESS_FR,VELOSTER_TPMS_PRESS_RL,VELOSTER_TPMS_PRESS_RR,VELOSTER_TPMS_TEMP_FL,VELOSTER_TPMS_TEMP_FR,VELOSTER_TPMS_TEMP_RL,VELOSTER_TPMS_TEMP_RR
+  "7C6":
+  - 7C6.7CE.22B002:VELOSTER_CLUSTER_VOLTAGE,VELOSTER_FLI_VOL,VELOSTER_ODO_KM,VELOSTER_ODO_MI
+  "7D1":
+  - 7D1.224000:HYUNDAI_TIRE_FL_VSS_V2,HYUNDAI_TIRE_FR_VSS_V2,HYUNDAI_TIRE_RL_VSS_V2,HYUNDAI_TIRE_RR_VSS_V2
+  "7D4":
+  - 7D4.7DC.220101:VELOSTER_BMS_CHG_PWR,VELOSTER_BMS_DISCHG_PWR,VELOSTER_BMS_MIN_TEMP,VELOSTER_BMS_MOD1_TEMP,VELOSTER_BMS_MOD2_TEMP,VELOSTER_BMS_MOD3_TEMP,VELOSTER_BMS_MOD4_TEMP,VELOSTER_BMS_SOC
+  "7E0":
   - 0101:ACRF_RDY,ACRF_SUP,AIR_RDY,AIR_SUP,CAT_RDY,CAT_SUP,CCM_RDY,CCM_SUP,CIM_SUP,DTC_CNT,EGR_RDY,EGR_SUP,EVAP_RDY,EVAP_SUP,FUEL_RDY,FUEL_SUP,HCAT_RDY,HCAT_SUP,HTR_RDY,HTR_SUP,MIL,MIS_RDY,MIS_SUP,O2S_RDY,O2S_SUP
   - 0103:FUELSYS1,FUELSYS2
   - 0104:LOAD_PCT
@@ -18,6 +32,7 @@ supported_commands_by_ecu:
   - 011C:OBDSUP
   - 011F:RUNTM
   - 0121:MIL_DIST
+  - 0123:FRP
   - 012E:EVAP_PCT
   - 012F:FLI
   - 0130:WARM_UPS
@@ -41,8 +56,15 @@ supported_commands_by_ecu:
   - 0151:FUEL_TYP
   - 0155:STSO2FT1
   - 0156:LGSO2FT1
-  7E1:
+  - 7E0.7E8.22E001:VELOSTER_INTAKE_TEMP,VELOSTER_OIL_TEMP
+  - 7E0.7E8.22E004:VELOSTER_AUX_SOC,VELOSTER_AUX_SOH
+  - 7E0.7E8.22E00A:VELOSTER_KNOCK_LEARN_1,VELOSTER_KNOCK_LEARN_2,VELOSTER_KNOCK_LEARN_3,VELOSTER_KNOCK_LEARN_4,VELOSTER_KNOCK_RETARD_1,VELOSTER_KNOCK_RETARD_2,VELOSTER_KNOCK_RETARD_3,VELOSTER_KNOCK_RETARD_4
+  "7E1":
   - 0101:ACRF_RDY,ACRF_SUP,AIR_RDY,AIR_SUP,CAT_RDY,CAT_SUP,CCM_RDY,CCM_SUP,CIM_SUP,DTC_CNT,EGR_RDY,EGR_SUP,EVAP_RDY,EVAP_SUP,FUEL_RDY,FUEL_SUP,HCAT_RDY,HCAT_SUP,HTR_RDY,HTR_SUP,MIL,MIS_RDY,MIS_SUP,O2S_RDY,O2S_SUP
   - 011C:OBDSUP
   - 0130:WARM_UPS
   - 0131:CLR_DIST
+unsupported_commands_by_ecu:
+  "7E0":
+  - 7E0.7E8.2221A0:VELOSTER_ATF_TEMP
+  - 7E0.7E8.22E021:VELOSTER_TURBO_BOOST,VELOSTER_WG_DUTY,VELOSTER_WG_POSITION,VELOSTER_WG_SETPOINT,VELOSTER_WG_VOLTAGE
