--- a/tests/test_cases/2020/commands/770.778.22BC04.yaml
+++ b/tests/test_cases/2020/commands/770.778.22BC04.yaml
@@ -1,16 +1,16 @@
 command_id: 770.778.22BC04
 test_cases:
-- response: |-
-    778100B62BC04F03764
-    77821E201000443AAAA
-  expected_values:
+- expected_values:
     VELOSTER_LOCK_FL: 0
     VELOSTER_LOCK_FR: 0
     VELOSTER_REVERSE_GEAR: 0
-- response: |-
+  response: |-
     778100B62BC04F03764
-    77821E20D000443AAAA
-  expected_values:
+    77821E201000443AAAA
+- expected_values:
     VELOSTER_LOCK_FL: 0
     VELOSTER_LOCK_FR: 0
     VELOSTER_REVERSE_GEAR: 1
+  response: |-
+    778100B62BC04F03764
+    77821E20D000443AAAA
