--- a/tests/test_cases/2020/commands/7C6.7CE.22B002.yaml
+++ b/tests/test_cases/2020/commands/7C6.7CE.22B002.yaml
@@ -1,47 +1,47 @@
 command_id: 7C6.7CE.22B002
 test_cases:
-- response: |-
-    7CE100F62B002E00000
-    7CE210011B20138E800
-    7CE220000AAAAAAAAAA
-  expected_values:
+- expected_values:
     VELOSTER_CLUSTER_VOLTAGE: 13.90625
     VELOSTER_FLI_VOL: 17
     VELOSTER_ODO_KM: 80104
     VELOSTER_ODO_MI: 0
-- response: |-
+  response: |-
     7CE100F62B002E00000
-    7CE210013B00138E700
+    7CE210011B20138E800
     7CE220000AAAAAAAAAA
-  expected_values:
+- expected_values:
     VELOSTER_CLUSTER_VOLTAGE: 13.75
     VELOSTER_FLI_VOL: 19
     VELOSTER_ODO_KM: 80103
     VELOSTER_ODO_MI: 0
-- response: |-
+  response: |-
     7CE100F62B002E00000
-    7CE210014AF0138E700
+    7CE210013B00138E700
     7CE220000AAAAAAAAAA
-  expected_values:
+- expected_values:
     VELOSTER_CLUSTER_VOLTAGE: 13.67188
     VELOSTER_FLI_VOL: 20
     VELOSTER_ODO_KM: 80103
     VELOSTER_ODO_MI: 0
-- response: |-
+  response: |-
     7CE100F62B002E00000
-    7CE210016AE0138E600
+    7CE210014AF0138E700
     7CE220000AAAAAAAAAA
-  expected_values:
+- expected_values:
     VELOSTER_CLUSTER_VOLTAGE: 13.59375
     VELOSTER_FLI_VOL: 22
     VELOSTER_ODO_KM: 80102
     VELOSTER_ODO_MI: 0
-- response: |-
+  response: |-
     7CE100F62B002E00000
-    7CE21001EB00138E700
+    7CE210016AE0138E600
     7CE220000AAAAAAAAAA
-  expected_values:
+- expected_values:
     VELOSTER_CLUSTER_VOLTAGE: 13.75
     VELOSTER_FLI_VOL: 30
     VELOSTER_ODO_KM: 80103
     VELOSTER_ODO_MI: 0
+  response: |-
+    7CE100F62B002E00000
+    7CE21001EB00138E700
+    7CE220000AAAAAAAAAA
