--- a/tests/test_cases/2020/commands/7D4.7DC.220101.yaml
+++ b/tests/test_cases/2020/commands/7D4.7DC.220101.yaml
@@ -1,119 +1,119 @@
 command_id: 7D4.7DC.220101
 test_cases:
-- response: |-
-    7DC10136201017D7DF5
-    7DC21CBFB83200A7E03
-    7DC22030303015301AA
-  expected_values:
+- expected_values:
     VELOSTER_BMS_CHG_PWR: 335.68
     VELOSTER_BMS_DISCHG_PWR: 26.86
     VELOSTER_BMS_MIN_TEMP: 1
     VELOSTER_BMS_SOC: 100
-- response: |-
-    7DC1013620101807EFF
-    7DC21D1FFDF00001200
-    7DC22000303014B01AA
-  expected_values:
+  response: |-
+    7DC10136201017D7DF5
+    7DC21CBFB83200A7E03
+    7DC22030303015301AA
+- expected_values:
     VELOSTER_BMS_CHG_PWR: 570.88
     VELOSTER_BMS_DISCHG_PWR: 0.18
     VELOSTER_BMS_MIN_TEMP: 1
     VELOSTER_BMS_SOC: 100
-- response: |-
-    7DC1013620101817FFF
-    7DC21D1FFDF00FFF400
+  response: |-
+    7DC1013620101807EFF
+    7DC21D1FFDF00001200
     7DC22000303014B01AA
-  expected_values:
+- expected_values:
     VELOSTER_BMS_CHG_PWR: 570.88
     VELOSTER_BMS_DISCHG_PWR: 655.24
     VELOSTER_BMS_MIN_TEMP: 1
     VELOSTER_BMS_SOC: 100
-- response: |-
-    7DC10136201018180FF
-    7DC21E6FFDF00000400
-    7DC22000303014C01AA
-  expected_values:
+  response: |-
+    7DC1013620101817FFF
+    7DC21D1FFDF00FFF400
+    7DC22000303014B01AA
+- expected_values:
     VELOSTER_BMS_CHG_PWR: 570.88
     VELOSTER_BMS_DISCHG_PWR: 0.04
     VELOSTER_BMS_MIN_TEMP: 1
     VELOSTER_BMS_SOC: 100
-- response: |-
-    7DC10136201018181FF
-    7DC21DFFFDF00007800
+  response: |-
+    7DC10136201018180FF
+    7DC21E6FFDF00000400
     7DC22000303014C01AA
-  expected_values:
+- expected_values:
     VELOSTER_BMS_CHG_PWR: 570.88
     VELOSTER_BMS_DISCHG_PWR: 1.2
     VELOSTER_BMS_MIN_TEMP: 1
     VELOSTER_BMS_SOC: 100
-- response: |-
-    7DC10136201018281FF
-    7DC21D0004E00007000
-    7DC22000303015401AA
-  expected_values:
+  response: |-
+    7DC10136201018181FF
+    7DC21DFFFDF00007800
+    7DC22000303014C01AA
+- expected_values:
     VELOSTER_BMS_CHG_PWR: 199.68
     VELOSTER_BMS_DISCHG_PWR: 1.12
     VELOSTER_BMS_MIN_TEMP: 1
     VELOSTER_BMS_SOC: 0
-- response: |-
-    7DC10136201018282FF
-    7DC21CA011100FFF200
-    7DC22000303016001AA
-  expected_values:
+  response: |-
+    7DC10136201018281FF
+    7DC21D0004E00007000
+    7DC22000303015401AA
+- expected_values:
     VELOSTER_BMS_CHG_PWR: 43.52
     VELOSTER_BMS_DISCHG_PWR: 655.22
     VELOSTER_BMS_MIN_TEMP: 1
     VELOSTER_BMS_SOC: 0.5
-- response: |-
-    7DC1013620101838008
-    7DC2148008C00FC5E20
-    7DC22200303015801AA
-  expected_values:
+  response: |-
+    7DC10136201018282FF
+    7DC21CA011100FFF200
+    7DC22000303016001AA
+- expected_values:
     VELOSTER_BMS_CHG_PWR: 358.4
     VELOSTER_BMS_DISCHG_PWR: 646.06
     VELOSTER_BMS_MIN_TEMP: 1
     VELOSTER_BMS_SOC: 0
-- response: |-
-    7DC1013620101838100
-    7DC2114FFD200FF8C00
-    7DC22000303015901AA
-  expected_values:
+  response: |-
+    7DC1013620101838008
+    7DC2148008C00FC5E20
+    7DC22200303015801AA
+- expected_values:
     VELOSTER_BMS_CHG_PWR: 537.6
     VELOSTER_BMS_DISCHG_PWR: 654.2
     VELOSTER_BMS_MIN_TEMP: 1
     VELOSTER_BMS_SOC: 100
-- response: |-
-    7DC1013620101838200
-    7DC2100FFDF00FFF500
-    7DC22000303014D01AA
-  expected_values:
+  response: |-
+    7DC1013620101838100
+    7DC2114FFD200FF8C00
+    7DC22000303015901AA
+- expected_values:
     VELOSTER_BMS_CHG_PWR: 570.88
     VELOSTER_BMS_DISCHG_PWR: 655.25
     VELOSTER_BMS_MIN_TEMP: 1
     VELOSTER_BMS_SOC: 100
-- response: |-
+  response: |-
     7DC1013620101838200
-    7DC2114000302FE2935
-    7DC22350303015901AA
-  expected_values:
+    7DC2100FFDF00FFF500
+    7DC22000303014D01AA
+- expected_values:
     VELOSTER_BMS_CHG_PWR: 7.7
     VELOSTER_BMS_DISCHG_PWR: 650.65
     VELOSTER_BMS_MIN_TEMP: 1
     VELOSTER_BMS_SOC: 0
-- response: |-
-    7DC1013620101838201
-    7DC21CB00600200DE30
-    7DC22300303014D01AA
-  expected_values:
+  response: |-
+    7DC1013620101838200
+    7DC2114000302FE2935
+    7DC22350303015901AA
+- expected_values:
     VELOSTER_BMS_CHG_PWR: 245.78
     VELOSTER_BMS_DISCHG_PWR: 2.22
     VELOSTER_BMS_MIN_TEMP: 1
     VELOSTER_BMS_SOC: 0
-- response: |-
-    7DC10136201018382FA
-    7DC2149FF8900FF3628
-    7DC22280303014D01AA
-  expected_values:
+  response: |-
+    7DC1013620101838201
+    7DC21CB00600200DE30
+    7DC22300303014D01AA
+- expected_values:
     VELOSTER_BMS_CHG_PWR: 350.72
     VELOSTER_BMS_DISCHG_PWR: 653.34
     VELOSTER_BMS_MIN_TEMP: 1
     VELOSTER_BMS_SOC: 100
+  response: |-
+    7DC10136201018382FA
+    7DC2149FF8900FF3628
+    7DC22280303014D01AA
