--- a/tests/test_cases/2020/commands/7E0.0131.yaml
+++ b/tests/test_cases/2020/commands/7E0.0131.yaml
@@ -1,11 +1,11 @@
 command_id: 7E0.0131
 test_cases:
-- response: 7E804413103A0
-  expected_values:
+- expected_values:
     CLR_DIST: 928
-- response: 7E804413103A1
-  expected_values:
+  response: 7E804413103A0
+- expected_values:
     CLR_DIST: 929
-- response: 7E804413103A2
-  expected_values:
+  response: 7E804413103A1
+- expected_values:
     CLR_DIST: 930
+  response: 7E804413103A2
