--- a/tests/test_cases/2020/commands/7E0.0142.yaml
+++ b/tests/test_cases/2020/commands/7E0.0142.yaml
@@ -1,5 +1,5 @@
 command_id: 7E0.0142
 test_cases:
-- response: 7E8044142384C
-  expected_values:
+- expected_values:
     VPWR: 14.412
+  response: 7E8044142384C
