--- a/tests/test_cases/2021/commands/770.778.22BC05.yaml
+++ b/tests/test_cases/2021/commands/770.778.22BC05.yaml
@@ -4,9 +4,14 @@ test_cases:
     VELOSTER_HAZARD_SW: 0
   response: |-
     778100B62BC053F1320
-    778210000800000AAAA
+    778210000000000AAAA
 - expected_values:
     VELOSTER_HAZARD_SW: 80
   response: |-
     778100B62BC053F1320
-    778210050800000AAAA
+    778210050000000AAAA
+- expected_values:
+    VELOSTER_HAZARD_SW: 240
+  response: |-
+    778100B62BC053F1320
+    7782100F0400000AAAA
